--- a/balance/src/main/webapp/WEB-INF/web.xml
+++ b/balance/src/main/webapp/WEB-INF/web.xml
@@ -1,32 +1,41 @@
 <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
 <web-app>
 	<display-name>Archetype Created Web Application</display-name>
 	<!-- 配置spring的加载文件路径及文件名称 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:beans.xml,classpath:spring-common.xml,classpath:spring-mybatis.xml</param-value>
+		<param-value>classpath:spring/*.xml</param-value>
+		<!-- beans.xml,classpath:spring-common.xml,classpath:spring-mybatis.xml</param-value> -->
 	</context-param>
-
-	<!-- 使用spring自带的监听器,其默认加载的是WEB-INF下的applicationContext.xml -->
+	<filter>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>utf-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
-	<!-- 自己去写一个监听器来实现加载beans.xml,进而启动spring容器 -->
-	<!-- <listener> <listener-class>com.amos.web.InitSpringFactoryListener</listener-class> 
-		</listener>
 	<servlet>
-		<servlet-name>HelloServlet</servlet-name>
-		<display-name>This is the display name of my J2EE component</display-name>
-		<description>This is the description of my J2EE component</description>
-		<servlet-class>com.balance.servlet.HelloServlet</servlet-class>
+		<servlet-name>springMVC</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:spring/spring-mvc.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
-
 	<servlet-mapping>
-		<servlet-name>HelloServlet</servlet-name>
-		<url-pattern>/servlet/HelloServlet</url-pattern>
-	</servlet-mapping> -->
+		<servlet-name>springMVC</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 </web-app>
